# cookiecutter-data-science

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.repo_name }}/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
{{ cookiecutter.repo_name }}/tests/: conftest.py
